force-app/main/default/objects/Promo_Line_Item__c/Promo_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Accessories tied to the Targeted Sales Promo campaigns for Upselling Accessories during DSA process.</description>
    <label>Upsell Accessory</label>
    <nameField>
        <label>Upsell Accessory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upsell Accessories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>