force-app/main/default/objects/Promo_Line_Item__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Model</valueSetName>
    </valueSet>
</CustomField>