force-app/main/default/objects/Promo_Line_Item__c/fields/No_of_Stock__c.field-meta.xml
<CustomField>
    <fullName>No_of_Stock__c</fullName>
    <label>No. of Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>