force-app/main/default/objects/Promo_Line_Item__c/fields/Promo_Price__c.field-meta.xml
<CustomField>
    <fullName>Promo_Price__c</fullName>
    <label>Promo Price (w/GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>