force-app/main/default/objects/Promo_Line_Item__c/fields/Variant_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Variant_Display_Name__c</fullName>
    <label>Variant Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>