force-app/main/default/objects/Promo_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Model__c</columns>
    <columns>No_of_Stock__c</columns>
    <columns>Threshold_Amount__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Usual_Price__c</columns>
    <columns>Item_Display_Name__c</columns>
    <columns>Variant_Display_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>